# Chatbot

./: .gitignore  FIXES_SUMMARY.md  README.md  pyproject.toml
Module_2_LLM_basics/: 01_llm_basics.ipynb  02_rag_basics.ipynb  03_rag_chatbot.ipynb  NOTEBOOK_FIXES.md
Module_2_LLM_basics/configs/: config.py  mistral.json
Module_2_LLM_basics/src/: loader.py  notebook_setup.py  parser.py  retriever.py
