[tool.poetry]
name = "nlp-course"
version = "0.1.0"
description = "Practical materials for an educational course in Natural Language Processing"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12.4,<3.13"
torch = "^2.2.0"
transformers = "^4.37.2"
pytest = "^8.0.0"
black = "^24.2.0"
isort = "^5.13.2"
pandas = "^2.2.0"
datasets = "^2.17.0"
jupyterlab = "^4.3.6"

[tool.poetry.group.classification.dependencies]
#add dependencies to this group with `poetry add new_package --group classification`
scikit-learn = "^1.6.1"
unidecode = "^1.3.8"
contractions = "^0.1.73"
nltk = "^3.9.1"
xgboost = "^2.1.4"
accelerate = "^0.27.2"
dspy = "^2.6.8"
asyncio = "^3.4.3"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
tabulate = "^0.9.0"

[tool.poetry.group.ner.dependencies]
#add dependencies to this group with `poetry add new_package --group ner`
evaluate = "^0.4.1"
seqeval = "^1.2.2"

[tool.poetry.group.search.dependencies]
#add dependencies to this group with `poetry add new_package --group search`
sentence-transformers = "^2.3.1"
faiss-cpu = "^1.7.4"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
pymilvus = "^2.3.6"

[tool.poetry.group.llm.dependencies]
#add dependencies to this group with `poetry add new_package --group llm`
openai = "^1.65.2"
langchain ="^0.3.19"
langchain-core = "^0.3.40"
langchain-openai = "^0.3.7"
langchain-community = "^0.3.18"
langchain-mistralai = "^0.2.7"
langgraph = "^0.3.2"
wikipedia = "^1.4.0"
langchain-chroma = "^0.2.2"
pypdf = "^5.3.1"
langgraph-prebuilt = "^0.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"